--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: 2.0.3
+  dartz: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
