--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   equatable: 2.0.3
   dartz: ^0.10.0
+  jwt_decoder: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
