--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   equatable: 2.0.3
   dartz: ^0.10.0
   jwt_decoder: ^2.0.1
+  http: ^0.13.1
 
 
   # The following adds the Cupertino Icons font to your application.
