--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dartz: ^0.10.0
   jwt_decoder: ^2.0.1
   http: ^0.13.1
+  flutter_secure_storage: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
