--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   http: ^0.13.1
   flutter_secure_storage: ^5.0.2
+  get_it: ^6.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
