--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^0.13.1
   flutter_secure_storage: ^5.0.2
   get_it: ^6.0.0
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
